k8s/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
      kubernetes.io/ingress.global-static-ip-name: k8s-fw-spexflix-production-main-ingress--7925afce811f0a15
spec:
  tls:
    - secretName: spexflix-se-tls
  rules:
  - host:
    http:
      paths:
      - path: /*
        backend:
          serviceName: front-end
          servicePort: web
      - path: /test
        backend:
          serviceName: front-end
          servicePort: web
